feature: implementacao gateway - WIP